# my_baxter

./: .gitignore  README.md  baxter.sh  baxter_sim.sh  baxter_start.sh  常用命令.md
src/: .rosinstall  .rosinstall.bak
src/baxter_common/baxter_description/urdf/: baxter.urdf.xacro
src/baxter_examples/scripts/: ik_service_client.py  joint_trajectory_file_playback.py  joint_velocity_wobbler.py
src/baxter_interface/scripts/: joint_trajectory_action_server.py
src/baxter_pykdl/: CMakeLists.txt
src/baxter_pykdl/src/baxter_kdl/: kdl_parser.py
src/baxter_pykdl/src/baxter_pykdl/: baxter_pykdl.py
src/baxter_simulator/baxter_gazebo/launch/: baxter_world.launch
src/baxter_simulator/baxter_sim_examples/: CMakeLists.txt
src/baxter_simulator/baxter_sim_io/: CMakeLists.txt
src/baxter_tools/scripts/: smoke_test.py
src/baxter_tools/src/baxter_tools/: smoketests.py
src/face_tracker/: CMakeLists.txt
src/face_tracker/launch/: face_follower.launch
src/face_tracker/scripts/: face_follower.py
src/greet_demo/: README.md  polite.py  voice_nav.py
src/my_robot_pkg/: CMakeLists.txt  GRIPPER_ANALYSIS.md  my_robot_pkg.md  package.xml
src/my_robot_pkg/launch/: bringup.launch  face_tracker.launch  poses.yaml
src/my_robot_pkg/scripts/: dance.py  end.py  face_follower.py  gesture_node.py  gripper.py  preset_executor.py
src/the_illusion_of_a_thinking_machine/: CMakeLists.txt
src/the_illusion_of_a_thinking_machine/launch/: preload_head_face.launch
src/visual_servoing/: CMakeLists.txt
src/visual_servoing/src/: visual_servoing.py  visual_servoing_setup.py
(+8 files in other folders)
